--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -5,7 +5,7 @@
       <div *ngFor="let weapon of weapons; let i = index">
         <div>武器編號: {{i}}</div>
         <div>武器名稱: {{weapon.name}}</div>
-        <div>武器攻擊力: {{weapon.ATK}}</div>
+        <div>武器攻擊力: {{weapon.dollar}}</div>
         <br>
       </div>
     </div>
