--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-role></app-role>
-<app-store></app-store>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <app-role></app-role>
+      <app-store></app-store>
+    </div>
+  </div>
+</div>
+
