add little style in store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 text-center">
       <app-role></app-role>
       <app-store></app-store>
     </div>
