update store layout

--- a/src/app/role/role.component.html
+++ b/src/app/role/role.component.html
@@ -3,6 +3,7 @@
     <div class="col-12">
       <div class="h1">角色區塊</div>
       <div>血量：{{hp}}</div>
+      <div>金錢：{{money}}</div>
     </div>
   </div>
 </div>
